--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FlipCard Viewer</title>
-  <script type="module" src="./src/flipcardViewer.js"></script>
+  <script type="module" src="./src/components/flipcard-viewer/index.js"></script>
 </head>
 <body>
 	<div class="outer" style="width:10rem; height:10rem;">
