--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
 </head>
 <body>
 	<div class="outer" style="width:10rem; height:10rem;">
-		<flipcard-viewer/>
+		<flipcard-viewer is-thumbnail="false"/>
 	</div>
 	<div class="outer" style="width:20rem; height:20rem;">
-		<flipcard-viewer/>
+		<flipcard-viewer is-thumbnail="false"/>
 	</div>
 	<div class="outer" style="width:30rem; height:30rem;">
-		<flipcard-viewer/>
+		<flipcard-viewer is-thumbnail="false"/>
 	</div>
 	 <br>
 
 	 <h2> Block Outer</h2>
 	 <div class="block-outer"	style="display: block; justify-content: space-around;">
-		<flipcard-viewer style="width:10rem; height:10rem;" > </flipcard-viewer>
-		<flipcard-viewer style="width:20rem; height:20rem;"> </flipcard-viewer>
-		<flipcard-viewer style="width:30rem; height:30rem;"> </flipcard-viewer>
-		<flipcard-viewer> </flipcard-viewer>
+		<flipcard-viewer style="width:10rem; height:10rem;" is-thumbnail="false"> </flipcard-viewer>
+		<flipcard-viewer style="width:20rem; height:20rem;" is-thumbnail="false"> </flipcard-viewer>
+		<flipcard-viewer style="width:30rem; height:30rem;" is-thumbnail="false"> </flipcard-viewer>
+		<flipcard-viewer is-thumbnail="false"> </flipcard-viewer>
 	 </div>
 
 	 <h2> Flex row</h2>
 	 <div class="flex outer" style="display: flex; flex-wrap: wrap; justify-content: space-around;">
-		<flipcard-viewer style="width:10rem; height:10rem;" > </flipcard-viewer>
-		<flipcard-viewer style="width:20rem; height:20rem;"> </flipcard-viewer>
-		<flipcard-viewer style="width:30rem; height:30rem;"> </flipcard-viewer>
-		<!-- <flipcard-viewer> </flipcard-viewer> -->
+		<flipcard-viewer style="width:10rem; height:10rem;" is-thumbnail="false"> </flipcard-viewer>
+		<flipcard-viewer style="width:20rem; height:20rem;" is-thumbnail="false"> </flipcard-viewer>
+		<flipcard-viewer style="width:30rem; height:30rem;" is-thumbnail="false"> </flipcard-viewer>
+		<!-- <flipcard-viewer is-thumbnail="false"> </flipcard-viewer> -->
 	 </div>
 </body>
 <script>
@@ -57,5 +57,11 @@
 		if(!flipcardViewer.hasAttribute('metadata-json')) flipcardViewer.setAttribute('metadata-json', metadataJson);
 		if(!flipcardViewer.hasAttribute('gateway-url')) flipcardViewer.setAttribute('gateway-url', 'https://ipfs.metaversis.io/ipfs/');
 	});
+
+	setTimeout(() => {
+		metadata.image = 'ipfs://QmXGRvnpWdDWbQHLsgDsPU86AgvAJn4YvaW1roeg7uKsCg'
+		flipcardViewers[0].setAttribute('metadata-json', JSON.stringify(metadata));
+		flipcardViewers[0].setAttribute('gateway-url', 'https://ipfs.metaversis.io/ipfs/');
+	}, 10000);
 </script>
 </html>
